[package]
name = "sanitation"
version = "1.0.2"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Gabriel Falcão <gabriel@nacaolivre.org>"]
description = "tool for developing memory-safe programs while detecting and capturing possibly malicious bytes."
documentation = "https://docs.rs/sanitation"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/sanitation"

[lib]
name = "sanitation"
path = "sanitation/lib.rs"
