[package]
name = "sanitation"
version = "1.0.3"
edition = "2024"
license = "MIT"
authors = ["Gabriel Falcão G. DeMoura <gabrielteratos@gmail.com>"]
description = "tool for developing memory-safe programs while detecting and capturing possibly malicious bytes."
documentation = "https://docs.rs/sanitation"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/sanitation"

[lib]
name = "sanitation"
path = "sanitation/lib.rs"
